# py-xtdb

./: .gitignore  README.md  deps.edn  pyproject.toml  readme.md  readme.org  requirements.txt  xtdb.edn
data/: query.edn
nb/: demo.ipynb
py_xtdb/: __init__.py  fake.py  run_queryf.py  swagger_analysis.py  utils.py  xt.py
src/xt/: wip.clj
tests/: test_py_xtdb.py
