[tool.poetry]
name = "py-xtdb"
version = "0.4.1"
description = "Small functions for interacting with XTDB via requests http."
homepage = "https://github.com/joefromct/py-xtdb"
keywords = ['xtdb']
license = "mit"
authors = ["joefromct <joefromct@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pampy = "^0.3.0"
cytoolz = "^0.11.2"
edn-format = "^0.7.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
ipython = "^8.3.0"
rootpath = "^0.1.1"
Faker = "^13.6.0"
faker-credit-score = "^0.3.0"
tabulate = "^0.8.9"
hierarchy-utils = "^0.1.3"
jupyterlab = "^3.4.2"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
